# projectreadmegen

./: .gitignore  LICENSE  MANIFEST.in  README.md  contributing.md  pyproject.toml  readme.md  readmegen.config.json  requirements.txt  security.md  server_stderr.txt  server_stdout.txt
.github/workflows/: ci.yml  release.yml
.ua/tmp/: ua-arch-analyze.js  ua-arch-input.json  ua-arch-results.json
examples/sample-cpp-project/: TEST_INTERACTIVE.md
examples/sample-python-bot/: README.md  TEST_README.md
examples/sample-web-project/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.js  router.js  state.js
frontend/src/components/: aiStudio.js  dashboard.js  gitTrack.js  mindmapStudio.js  profileStudio.js  scannerStudio.js  skillsStudio.js
frontend/src/gittrack/: treeLayout.js
frontend/src/mindmap/: treeLayout.js
frontend/src/pages/: aiPage.js  gitPage.js  mindmapPage.js  profilePage.js  settingsPage.js  skillsPage.js  studioPage.js
src/projectreadmegen/: __init__.py  __main__.py  ai_provider.py  badges.py  cli.py  config.py  constants.py  detector.py  exceptions.py  generator.py  github_profile.py  grok.py  pipeline.py  scanner.py  server.py  skills_manager.py  usagetracker.py  utils.py
src/projectreadmegen/skills/Testing and QA/playwright-skill/: .temp-execution-1784355593716.js  package-lock.json  package.json  run.js
src/projectreadmegen/skills/Testing and QA/playwright-skill/lib/: helpers.js
src/projectreadmegen/templates/: academic.md.j2  full.md.j2  minimal.md.j2  standard.md.j2
src/projectreadmegen/web/: app.py
src/projectreadmegen/web/static/: main.js  style.css
src/projectreadmegen/web/templates/: index.html
src/projectreadmegen/web_dist/: index.html
src/projectreadmegen/web_dist/assets/: index-AoJvAk0x.js  index-B6_qYss9.css  index-Boeu7oZj.js  index-Bqei6SiA.css  index-CC1kUvje.js  index-CG_FBTRb.js  index-CKcL6CCJ.js  index-DOPmof4x.css  index-DUuKIV9F.css  index-DzvXJRuw.js
tests/: conftest.py  test_detector.py  test_generator.py  test_github_profile.py  test_scanner.py
tests/e2e/: test_e2e_cli.py  test_e2e_web.py
tests/smoke/: test_smoke.py
tests/unit/: test_ai_provider.py  test_badges.py  test_cli_commands.py  test_config.py  test_constants.py  test_detector.py  test_exceptions.py  test_generator.py  test_github_profile.py  test_pipeline.py  test_scanner.py  test_server.py  test_skills_manager.py  test_usagetracker.py  test_utils.py
web/templates/: index.html
