[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "projectreadmegen"
version         = "2.0.3"
description     = "Auto-generate professional README files from folder structure with AI power"
readme          = "README.md"
requires-python = ">=3.10"
license         = "MIT"
authors = [
    { name = "roshellwett", email = "roshhellwett@icloud.com" },
]
keywords = [
    "readme",
    "github",
    "profile-readme",
    "ai",
    "automation",
    "documentation",
    "markdown",
    "template",
    "groq",
    "cli-tool",
    "developer-tools"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "jinja2>=3.1",
    "flask>=3.0",
    "openai>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/roshhellwett/projectreadmegen"
Repository = "https://github.com/roshhellwett/projectreadmegen"
Documentation = "https://github.com/roshhellwett/projectreadmegen#readme"
Issues = "https://github.com/roshhellwett/projectreadmegen/issues"
Changelog = "https://github.com/roshhellwett/projectreadmegen/releases"

[project.scripts]
projectreadmegen = "projectreadmegen.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["projectreadmegen*"]

[tool.setuptools.package-data]
projectreadmegen = ["templates/*.j2", "web/**/*"]
